# gym-breakout-pygame

./: .gitignore  .gitmodules  .spelling  .travis.yml  404.html  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: RELEASE_PR.md
.github/workflows/: python.yml
authors/: index.html
contributing/: index.html
docs/: random.ipynb
examples/: breakout_n.ipynb  random.ipynb  training.ipynb
gym_breakout_pygame/: __main__.py  __version__.py  breakout_env.py  utils.py
gym_breakout_pygame/wrappers/: __init__.py  dict_space.py  normal_space.py  observation_space.py  pixel_space.py  skipper.py
history/: index.html
scripts/: check_copyright.py  whitelist.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_dummy.py  test_main.py
